--- a/envs/pip/requirements.txt
+++ b/envs/pip/requirements.txt
@@ -26,6 +26,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
 entrypoints==0.4
+et-xmlfile==1.1.0
 exceptiongroup==1.2.0
 executing==2.0.1
 fastjsonschema==2.20.0
@@ -46,6 +47,7 @@ importlib_metadata==8.0.0
 importlib_resources==6.4.0
 iniconfig==2.0.0
 ipykernel==6.29.5
+ipyparallel==8.8.0
 ipython==8.26.0
 isoduration==20.11.0
 isort==5.13.2
@@ -73,6 +75,7 @@ matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.0.2
 mpmath==1.3.0
+multiprocess==0.70.16
 munkres==1.1.4
 nbclient==0.10.0
 nbconvert==7.16.4
@@ -82,6 +85,7 @@ networkx==3.3
 notebook==7.2.1
 notebook_shim==0.2.4
 numpy==2.0.0
+openpyxl==3.1.5
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
@@ -120,6 +124,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.18.1
+SALib==1.5.0
 scipy==1.14.0
 seaborn==0.13.2
 Send2Trash==1.8.3
